	anymore.

    o	lm.influence() called on a 0-rank fit either crashed or produced
	incorrect output.

    o	str(x) gives better output when x is of mode "(".

    o	Lapack error messages corrected (PR#3494) and incorrect call to
	DGEQP3 (PR#2867).

    o	format(*, nsmall = m) with m > 0 now returns exponential format
	less often.

    o	file.copy() ignored the overwrite argument (PR#3529)



		CHANGES IN R VERSION 1.7.1


NEW FEATURES

    o	The help pages give appropriate references to the Blue,
	White or Green books for functions based on the descriptions
	of S functions given there. (E&OE)

    o	Function getAnywhere() can find non-exported objects, for
	namespaces or registered methods.


DEPRECATED & DEFUNCT

    o	The (unimplemented) argument 'white' of parse() is deprecated.

    o	The tkfilefind demo in the tcltk library is deprecated, since
	it never worked well, and apparently not at all with Tcl/Tk 8.4.


BUG FIXES

    o	print.table() used too much white space in some cases in 1.7.0.

    o	selectMethod() failed if `f' was a non-generic and
	optional=TRUE, and gave a confusing error message if
	optional=FALSE.

    o	pchisq(*, ncp) and qchisq(*, ncp) work in more cases for large ncp
	or quantile and give warning or error messages otherwise.

    o	str(x) now also works when x is an "externalptr" (or "weakref").

    o	rbeta(), rf(), and rt() now support infinite parameter values;
	other distributions return NaN instead of NA for such.

    o	Redefining a class is now safer if the new definition
	generates an error (previously some invalid metadata could be
	left behind).

    o	A number of errors are now caught in setClass() that
	previously either went unchecked or waited until new() to
	appear:
	- classes may not contain themselves, directly or indirectly;
	- classes appearing either as slots or as superclasses must
	  themselves be defined;
	- slot names (direct or inherited) must be unique.